<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="9"
        android:background="@color/main1">

        <LinearLayout
            android:id="@+id/one.one"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btt_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_7"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_8"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_9"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/one.two"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btt_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_4"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_5"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_6"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/one.three"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btt_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_1"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_2"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_3"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/one.four"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btt_point"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_point"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_0"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_equal"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:orientation="vertical"
        android:background="@color/main2">
        <Button
            android:id="@+id/btt_del"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btt_del"
            android:textSize="30dp"
            android:textColor="@color/text_color"
            android:background="@color/main2"/>
        <Button
            android:id="@+id/btt_div"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btt_div"
            android:textSize="30dp"
            android:textColor="@color/text_color"
            android:background="@color/main2"/>
        <Button
            android:id="@+id/btt_mull"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btt_mull"
            android:textSize="30dp"
            android:textColor="@color/text_color"
            android:background="@color/main2"/>
        <Button
            android:id="@+id/btt_min"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btt_min"
            android:textSize="30dp"
            android:textColor="@color/text_color"
            android:background="@color/main2"/>
        <Button
            android:id="@+id/btt_plus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btt_plus"
            android:textSize="30dp"
            android:textColor="@color/text_color"
            android:background="@color/main2"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/side1">
    </LinearLayout>





</LinearLayout>