<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/side1">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="9"
        android:background="@color/main1">

        <LinearLayout
            android:id="@+id/two.one"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btt_sin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_sin"
                android:textAllCaps="false"
                android:onClick="isNotImplemented"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_cos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_cos"
                android:textAllCaps="false"
                android:onClick="isNotImplemented"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_tan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_tan"
                android:textAllCaps="false"
                android:onClick="isNotImplemented"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/two.two"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btt_ln"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_ln"
                android:textAllCaps="false"
                android:onClick="isNotImplemented"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_log"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_log"
                android:textAllCaps="false"
                android:onClick="isNotImplemented"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_fact"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_fact"
                android:textSize="30dp"
                android:onClick="isNotImplemented"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/two.three"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btt_pi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_pi"
                android:textAllCaps="false"
                android:onClick="isNotImplemented"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_e"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_e"
                android:textAllCaps="false"
                android:onClick="isNotImplemented"
                android:textSize="30dp"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_exp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_exp"
                android:textSize="30dp"
                android:onClick="isNotImplemented"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/two.four"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btt_par1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_par1"
                android:textSize="30dp"
                android:onClick="isNotImplemented"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_par2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_par2"
                android:textSize="30dp"
                android:onClick="isNotImplemented"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>
            <Button
                android:id="@+id/btt_rad"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btt_rad"
                android:textSize="30dp"
                android:onClick="isNotImplemented"
                android:textColor="@color/text_color"
                android:background="@color/main1"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:orientation="vertical"
        android:background="@color/main2">
        <Button
            android:id="@+id/btt_del"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btt_del"
            android:textSize="30dp"
            android:onClick="onClickClear"
            android:textColor="@color/text_color"
            android:background="@color/main2"/>
        <Button
            android:id="@+id/btt_div"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btt_div"
            android:textSize="30dp"
            android:onClick="onClickOperator"
            android:textColor="@color/text_color"
            android:background="@color/main2"/>
        <Button
            android:id="@+id/btt_mull"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btt_mull"
            android:textSize="30dp"
            android:onClick="onClickOperator"
            android:textColor="@color/text_color"
            android:background="@color/main2"/>
        <Button
            android:id="@+id/btt_min"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btt_min"
            android:textSize="30dp"
            android:onClick="onClickOperator"
            android:textColor="@color/text_color"
            android:background="@color/main2"/>
        <Button
            android:id="@+id/btt_plus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btt_plus"
            android:textSize="30dp"
            android:onClick="onClickOperator"
            android:textColor="@color/text_color"
            android:background="@color/main2"/>

    </LinearLayout>

</LinearLayout>