<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorPrimaryDark"
              android:padding="2dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:minWidth="300dp"
              android:minHeight="200dp">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:paddingLeft="4dp"
        android:text="@string/dialog_title"
        android:textSize="20dp"
        android:background="@color/dialog_bg"
        android:drawableLeft="@drawable/ic_warning_white_24dp"
        android:textColor="@color/colorAccent"
        android:layout_weight=".4"/>
    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/dialog_message"
        android:padding="2dp"
        android:textSize="20dp"
        android:layout_marginBottom="1dp"
        android:textColor="@color/text_color"
        android:background="@color/dialog_bg"
        android:gravity="center"
        android:layout_weight=".3"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="2dp"
        android:layout_weight=".3">
    <Button
        android:id="@+id/dialog_ok"
        android:layout_width="0dp"
        android:background="@color/dialog_bg"
        android:layout_height="match_parent"
        android:layout_marginRight="1dp"
        android:textSize="20dp"
        android:text="@string/ok"
        android:textColor="@color/text_color"
        android:layout_weight=".5"/>
    <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="0dp"
        android:background="@color/dialog_bg"
        android:layout_height="match_parent"
        android:textSize="20dp"
        android:text="@string/cancel"
        android:textColor="@color/text_color"
        android:layout_weight=".5"/>
    </LinearLayout>

</LinearLayout>